<?xml version="1.0"?>
<package format="3">
  <name>rslidar_sdk</name>
  <version>1.5.21</version>
  <description>The rslidar_sdk package</description>
  <maintainer email="yhjin1096@zeroworks.co.kr">ZEROWORKS</maintainer>
  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <depend>libpcap</depend>
  <depend condition="$ROS_VERSION == 1">pcl_ros</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">roslib</depend>
  <!-- rslidar_msg 메시지는 thirdparty/rslidar_msg 서브모듈을 add_subdirectory 로
       인라인 생성한다. 별도 colcon 패키지 의존이 아니므로 rslidar_msg depend 대신
       rosidl 메시지 생성/런타임 의존만 선언한다. -->
  <depend condition="$ROS_VERSION == 2">builtin_interfaces</depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend condition="$ROS_VERSION == 2">geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 2">tf2_ros</depend>
  <depend condition="$ROS_VERSION == 2">std_srvs</depend>
  <depend condition="$ROS_VERSION == 2">ament_index_cpp</depend>
  <!-- rslidar_ctrl_node 의 lib/rs_ctrl_driver 소스가 Boost(Asio/System/DateTime) 헤더 사용 -->
  <depend condition="$ROS_VERSION == 2">boost</depend>
  <depend>yaml-cpp</depend>

  <export>
     <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
