<?xml version="1.0"?>
<package format="3">
  <name>rslidar_sdk</name>
  <version>1.5.21</version>
  <description>The rslidar_sdk package</description>
  <maintainer email="yhjin1096@zeroworks.co.kr">ZEROWORKS</maintainer>
  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend>libpcap</depend>
  <depend condition="$ROS_VERSION == 1">pcl_ros</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">roslib</depend>
  <depend condition="$ROS_VERSION == 2">rslidar_msg</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend condition="$ROS_VERSION == 2">geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 2">tf2_ros</depend>
  <depend condition="$ROS_VERSION == 2">std_srvs</depend>
  <depend condition="$ROS_VERSION == 2">ament_index_cpp</depend>
  <depend>yaml-cpp</depend>

  <export>
     <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
